--- a/views/lib/components/modal-cancel.hbs
+++ b/views/lib/components/modal-cancel.hbs
@@ -1,11 +1,11 @@
 {{#extend "lib/components/modal"}}
     {{#content "body"}}
         <div class="modal-footer">
-            <button type="button" class="sc-btn sc-btn-secondary btn-close">
+            <button type="button" class="btn btn-secondary btn-close">
                 Abbrechen
             </button>
 
-            <button type="submit" class="sc-btn sc-btn-primary btn-close" onclick="window.history.back();">
+            <button type="submit" class="btn btn-primary btn-close" onclick="window.history.back();">
                 Änderung verwerfen
             </button>
         </div>
