--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -2,7 +2,6 @@
 @import '../lib/bootstrap/scss/bootstrap-grid';
 @import 'homework';
 
-
 .route-homework {
   position: relative;
   .sort{
@@ -52,7 +51,24 @@
         display: initial;
       }
       p {
-        display: none;
+        transition: visibility 0s linear 0.3s, opacity 0.3s linear 0s;
+        opacity: 0;
+        visibility: hidden;
+
+        position: absolute;
+        top: 11px;
+        right: 67px;
+        padding: 5px 9px;
+        border-radius: 3px;
+        font-size: 14px;
+        color: #fff;
+        background-color: #212121;
+        white-space: nowrap;
+      }
+      &:hover p {
+        transition-delay: 0s, 0s;
+        opacity: .8;
+        visibility: visible;
       }
     }
   }
@@ -61,8 +77,8 @@
   }
   .action-group{
     position: absolute;
-    bottom: 0px;
-    left: 8px;
+    bottom: 10px;
+    left: 10px;
   }
   .disableable.disabled{
     -webkit-filter: grayscale(100%) opacity(0.7);
