--- a/views/administration/courses.hbs
+++ b/views/administration/courses.hbs
@@ -21,7 +21,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="sc-btn sc-btn-primary btn-add">
+                            <button type="submit" class="btn btn-primary btn-add">
                                 Kurs hinzufügen
                             </button>
                         </div>
