--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -32,7 +32,7 @@
                                     </div>
                                     {{/if}}
 
-                                    <button type="submit" class="sc-btn sc-btn-primary btn-submit">Speichern</button>
+                                    <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
 
                                 </form>
 
@@ -92,7 +92,7 @@
                                         </select>
                                     </div>
 
-                                    <button type="submit" class="sc-btn sc-btn-primary btn-submit">Speichern</button>
+                                    <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
 
                                 </form>
                         </div>
