--- a/views/files/file-viewer.hbs
+++ b/views/files/file-viewer.hbs
@@ -16,8 +16,8 @@
             <input class="box" type="checkbox" name="allowExternalViewers" value="save">Diese Auswahl merken<br>
         </div>
         <div class="modal-footer">
-            <button type="button" class="sc-btn sc-btn-secondary btn-close">Abbrechen</button>
-            <button type="submit" class="sc-btn sc-btn-primary btn-submit">Öffnen</button>
+            <button type="button" class="btn btn-secondary btn-close">Abbrechen</button>
+            <button type="submit" class="btn btn-primary btn-submit">Öffnen</button>
         </div>
     {{/content}}
 {{/embed}}
