--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -3,7 +3,7 @@
         <div class="assignment row">
             <div class="description col-xl-12 print">
                 {{#if this.description}}
-                    <div class="sc-btn sc-btn-secondary btn-print mb-1"
+                    <div class="btn btn-secondary btn-print mb-1"
                         data-toggle="tooltip" title="Aufgabenstellung drucken">
                             <i class='fa fa-print'></i> Drucken
                     </div>
@@ -21,8 +21,8 @@
         </div>
         {{#ifvalue teacherId value=currentUser._id}}
         {{#userHasPermission "HOMEWORK_CREATE"}}
-            <a class="sc-btn sc-btn-primary btn-edit" href="/homework/{{../_id}}/edit" alt="Aufgabe '{{../title}}' bearbeiten.">Bearbeiten</a>
-            <a class="sc-btn sc-btn-secondary btn-delete"
+            <a class="btn btn-primary btn-edit" href="/homework/{{../_id}}/edit" alt="Aufgabe '{{../title}}' bearbeiten.">Bearbeiten</a>
+            <a class="btn btn-secondary btn-delete"
                href="/homework/{{../_id}}"
                redirect="/homework"
                target="_blank"
@@ -51,7 +51,7 @@
         
         {{#inArray this.currentUser._id this.archived}}
             {{#userHasPermission "HOMEWORK_CREATE"}}
-            <a class="sc-btn sc-btn-secondary btn-archive"
+            <a class="btn btn-secondary btn-archive"
                 href="{{this.url}}"
                 target="_blank"
                 data="archive=open"
@@ -62,20 +62,20 @@
             {{/userHasPermission}}
         {{else}}
             {{#userHasPermission "HOMEWORK_CREATE"}}
-                <a class="sc-btn sc-btn-secondary btn-archive"
+                <a class="btn btn-secondary btn-archive"
                 href="{{this.url}}"
                 target="_blank"
                 data="archive=done"
                 data-toggle="tooltip" title="Verschiebe Aufgabe zwischen Übersichtsseite und Archiv"
                 alt-text="<i class='fa fa-mail-reply'></i> Wiederherstellen">
-                    Archivieren
+                    <i class='fa fa-archive'></i> Archivieren
             </a>
             {{/userHasPermission}}
         {{/inArray}}
         {{#if courseId._id}}
-            <a class="sc-btn sc-btn-secondary" href="/courses/{{courseId._id}}" alt="zum Kurs der Aufgabe">zum Kurs</a>
+            <a class="btn btn-secondary" href="/courses/{{courseId._id}}" alt="zum Kurs der Aufgabe">zum Kurs</a>
             {{#if lessonId}}
-                <a class="sc-btn sc-btn-secondary" href="/courses/{{courseId._id}}/topics/{{lessonId}}"
+                <a class="btn btn-secondary" href="/courses/{{courseId._id}}/topics/{{lessonId}}"
                    alt="zum Thema der Aufgabe">zum Thema</a>
             {{/if}}
         {{/if}}
@@ -83,10 +83,10 @@
     {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
         {{#content "body"}}
             <div class="modal-footer">
-                <button type="button" class="sc-btn sc-btn-secondary btn-close">
+                <button type="button" class="btn btn-secondary btn-close">
                     Abbrechen
                 </button>
-                <button type="submit" class="sc-btn sc-btn-primary btn-submit">
+                <button type="submit" class="btn btn-primary btn-submit">
                     Löschen
                 </button>
             </div>
