--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -2,10 +2,10 @@
     <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
 {{/content}}
 {{#content "scripts" mode="append"}}
-    <script src="/vendor/ckeditor/ckeditor.js" defer />
-    <script src="/scripts/mousetrap/mousetrap.js" defer />
-    <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer />
-    <script src="/scripts/news.js" defer />
+    <script src="/vendor/ckeditor/ckeditor.js" defer></script>
+    <script src="/scripts/mousetrap/mousetrap.js" defer></script>
+    <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
+    <script src="/scripts/news.js" defer></script>
     <script>
         window.addEventListener('DOMContentLoaded', function() {
             CKEDITOR.replaceAll(function (textarea, config) {
@@ -23,6 +23,7 @@
                 document.getElementById('news-form').submit();
                 return false;
             });
+
         });
     </script>
 {{/content}}
@@ -51,11 +52,11 @@
             </div>
 
             <div class="modal-footer">
-                <button class="sc-btn btn-add sc-btn-secondary btn-cancel">
+                <button class="btn btn-add btn-secondary btn-cancel">
                     {{closeLabel}}
                 </button>
 
-                <button type="submit" class="sc-btn sc-btn-primary btn-submit">
+                <button type="submit" class="btn btn-primary btn-submit">
                     {{submitLabel}}
                 </button>
             </div>
