--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -37,7 +37,7 @@
     {{/block}}
 
 </head>
-<body>
+<body {{#if inline}}class="window-inline"{{/if}}>
     {{#block "body"}}{{/block}}
 
     {{#unless inline}}
