remove password hint for sso

--- a/views/registration/user.hbs
+++ b/views/registration/user.hbs
@@ -1,4 +1,4 @@
-{{#extend "registration/registration"}}
+{{#extend "registration/registration" nopassword="true" }}
     {{#content "fields"}}
         <div class="form-group">
             <label>Vorname</label>
