--- a/views/registration/account.hbs
+++ b/views/registration/account.hbs
@@ -1,4 +1,4 @@
-{{#extend "registration/registration"}}
+{{#extend "registration/registration" noPassword="false"}}
     {{#content "fields"}}
         <div class="form-group">
             <div class="form-group">
