--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -41,10 +41,12 @@
 
                             </div>
 
+                            {{#if noPassword }}
                             <span class="hint">
                                 <sup>*</sup>
                                 Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen.
                             </span>
+                            {{/if}}
                         </div>
                     </div>
                 </div>
