start to fight against multiple ids

--- a/views/content/rating.hbs
+++ b/views/content/rating.hbs
@@ -27,7 +27,7 @@
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="3" readonly="false" id="{{ _id }}" ></span>
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="4" readonly="false" id="{{ _id }}" ></span>
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="5" readonly="false" id="{{ _id }}" ></span>
-                        <input type="hidden" id="{{ _id }}" class="rating-value" value="{{rating}}">
+                        <input type="hidden" id="{{ _id }}" data-actualid="rating{{ _id }}" class="rating-value" value="{{rating}}">
                     </span>
                     </td>
                     <td width="10%">
