--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -1,11 +1,11 @@
 <section id="submission" class="tab-content section-homeworkdetails">
   {{#if @root.submittable}}
     <div class="comment editor">
-        {{#embed "files/file-upload" }}{{/embed}}
+        {{#embed "files/file-upload" path=@root.path}}{{/embed}}
 
       {{#if @root.submission}}
-        <form class="form submissionForm ajaxForm" method="post" action="/homework/submit/{{submission._id}}">
-        <input name="submissionId" type="hidden" data-force-value="true" value="{{submission._id}}"/>
+        <form class="form submissionForm ajaxForm" method="post" action="/homework/submit/{{@root.submission._id}}">
+        <input name="submissionId" type="hidden" data-force-value="true" value="{{@root.submission._id}}"/>
       {{else}}
         <form class="form submissionForm" method="post" action="/homework/submit">
       {{/if}}
