add url handling
TODO:
default filter

--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -24,6 +24,7 @@
                         add-label='Filter hinzufügen'
                         apply-label='Übernehmen'
                         cancle-label='Abbrechen'
+                        handle-url='true'
                 /></div>
 
                 <ol class="homework">
