override jQuery ready & bugfixing

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -304,6 +304,7 @@ body.fullscreen{
         top:0;
         left:0;
         right: 0;
+        min-height: 100vh;
         z-index: 101;
         padding: 16px;
         background: #fff;
