--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -13,7 +13,7 @@
             <div class="comment">
                 {{#if this.submission}}
                     {{#ifneq 0 (arrayLength this.submission.fileIds)}}
-                        {{#embed "homework/components/submission_uploaded_files" deletionAllowed=false}}{{/embed}}
+                        {{#embed "homework/components/submission_uploaded_files" deletionAllowed=false submission=../submission}}{{/embed}}
                         <hr>
                     {{/ifneq}}
                     <div class="ckcontent print">
