--- a/views/administration/administration.hbs
+++ b/views/administration/administration.hbs
@@ -4,6 +4,7 @@
         <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
         <script src="/scripts/tables.js" type="text/javascript" defer></script>
         <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
+        <script src="/scripts/filter/feathers-filter.js" defer></script>
     {{/content}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
