--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -9,8 +9,8 @@
                                       cancle-label='Abbrechen'
                                       handle-url='true'
                 /></div>
-                <div class="container-fluid">
-                    <div class="row ajaxcontent">
+                <div class="container-fluid ajaxcontent">
+                    <div class="row">
                         <div class="col-sm-12 no-padding">
                             {{> "lib/components/table" head=head body=body}}
                         </div>
