SC-6 ~ Schülerverwaltung sortieren (#603)
* sort for student & teacher view

next step: limit filter

* recovered itemsPerPage option

* Formatting and have teachers sorted by lastName by default

* formatting and corrected inline syntax

* fixed wrong filter module version & used lastname

* fix wrong container again

* fix print handler added multiple times

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -23,7 +23,7 @@
                         <div class="card-block">
 
                             <h4>Herzlich willkommen bei der Schul-Cloud !</h4>
-                            <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit dem <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von knapp 300 Schulen und unterstützt vom Bundesministerium für Bildung und Forschung eine Schul-Cloud. Die Schul-Cloud soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tabletts nutzbar sind.</p>
+                            <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit dem <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von knapp 300 Schulen und unterstützt vom Bundesministerium für Forschung und Bildung eine Schul-Cloud. Die Schul-Cloud soll die technische Grundlage schaffen, dass Lehrer und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, so zwar so, wie Apps über Smartphones oder Tabletts nutzbar sind.</p>
 
                             <p class="embed-responsive embed-responsive-16by9">
                                 <iframe src="https://www.youtube.com/embed/QHLJERDWW5s?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="embed-responsive-item"></iframe>
