--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -2,7 +2,14 @@
     {{#content "page"}}
         <div class="route-administration">
             <section class="section-school section-default">
-                <div class="container-fluid">
+                <div><feathers-filter id="filter"
+                                      filter='{{filterSettings}}'
+                                      add-label='Filter hinzufügen'
+                                      apply-label='Übernehmen'
+                                      cancle-label='Abbrechen'
+                                      handle-url='true'
+                /></div>
+                <div class="container-fluid ajaxcontent">
                     <div class="row">
                         <div class="col-sm-12 no-padding">
                             {{> "lib/components/table" head=head body=body}}
