padding on card-tags

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -142,6 +142,7 @@
             padding-top: 10px;
             .tag {
                 font-size: 100%;
+                margin-bottom: 10px;
             }
         }
     }
