get ratingrequests from server

--- a/views/content/rating.hbs
+++ b/views/content/rating.hbs
@@ -17,6 +17,7 @@
                             <h3>{{title}}</h3>
                         </div>
 
+                        <!--TODO dynamic content path-->
                         <div class="content-path"> Mathe/Algebra/</div>
                         via {{ providerName }}
                     </td>
@@ -27,11 +28,12 @@
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="3" readonly="false" id="{{ _id }}" ></span>
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="4" readonly="false" id="{{ _id }}" ></span>
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="5" readonly="false" id="{{ _id }}" ></span>
-                        <input type="hidden" id="{{ _id }}" data-actualid="rating{{ _id }}" class="rating-value" value="{{rating}}">
+                        <input type="hidden" id="{{ _id }}" data-actualid="rating{{ _id }}"
+                               data-ratingrequestid="{{ ratingrequestid }}" class="rating-value" value="{{rating}}">
                     </span>
                     </td>
                     <td width="10%">
-                        <div class="pull-right btn btn-primary btn-send-rate" id="{{ _id }}"> send </div>
+                        <div class="pull-right btn btn-primary btn-send-rate" id="{{ _id }}"> bewerten </div>
                     </td>
 
                 </tr>
