--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -11,7 +11,7 @@
 
     {{#content "page"}}
         <div class="pull-right btn btn-primary rate-content contentInbox-modal" id="InboxContentBtn" href="/content/rate/rating"  data-toggle="modal" data-target="#InboxContent" >
-            Rate Content
+            Bewerte Material
         </div>
 
         <div class="modal fade" id="InboxContent" role="dialog">
