--- a/views/content/rating.hbs
+++ b/views/content/rating.hbs
@@ -17,7 +17,7 @@
                             <h3>{{title}}</h3>
                         </div>
 
-                        <!--TODO dynamic content path-->
+                        <!--TODO X dynamic content path-->
                         <div class="content-path"> Mathe/Algebra/</div>
                         via {{ providerName }}
                     </td>
