--- a/views/content/search-results.hbs
+++ b/views/content/search-results.hbs
@@ -1,4 +1,4 @@
-<!-- TODO show ratings -->
+<!-- TODO X show ratings -->
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
