--- a/views/content/rating.hbs
+++ b/views/content/rating.hbs
@@ -17,7 +17,7 @@
                             <h3>{{title}}</h3>
                         </div>
 
-                        <div class="content-path"> Mathe/Algebra/</div>
+                        <div class="content-path"> {{courseTitle}} / {{topicTitle}}</div>
                         via {{ providerName }}
                     </td>
                     <td width="20%">
@@ -27,7 +27,7 @@
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="3" readonly="false" id="{{ _id }}" ></span>
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="4" readonly="false" id="{{ _id }}" ></span>
                         <span class="fa fa-star-o rate-item rate-item-active" data-rating="5" readonly="false" id="{{ _id }}" ></span>
-                        <input type="hidden" id="{{ _id }}" data-actualid="rating{{ _id }}" class="rating-value" value="{{rating}}">
+                        <input type="hidden" id="{{ _id }}" data-actualid="rating{{ _id }}" class="rating-value" value="{{rating}}" course="{{courseId}}" topic="{{topicId}}" content="{{materialId}}" >
                     </span>
                     </td>
                     <td width="10%">
@@ -38,10 +38,6 @@
             {{/each}}
             </table>
         </div>
-        <!--<div class="modal-footer">
-
-          <button  class="btn btn-primary btn-send-rate" data-dismiss="modal"> send </button>
-        </div>-->
     </div>
 
 </div>
