send -> senden, since UI is German

--- a/views/content/rating.hbs
+++ b/views/content/rating.hbs
@@ -33,7 +33,7 @@
                     </span>
                     </td>
                     <td width="10%">
-                        <div class="pull-right btn btn-primary btn-send-rate" id="{{ _id }}"> send </div>
+                        <div class="pull-right btn btn-primary btn-send-rate" id="{{ _id }}"> senden </div>
                     </td>
 
                 </tr>
