--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -40,28 +40,33 @@
                 melden <i class="fa fa-flag" aria-hidspanden="true"></i>
             </a>
         {{/userIsAllowedToViewContent}}
-        <div class="rate">
-            <span> Lehrer Bewertung : </span>
+        <table>
+        <tr class="rate">
+            <td> Lehrer Bewertung : </td>
+            <td>
             <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
             <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
             <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
             <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
             <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
-            <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{rating}}}">
-            <span > ( {{{rating}}})</span>
-        </div>
+            <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{teacherRating}}}">
+            <span > ( {{{teacherRating}}})</span>
+            </td>
+        </tr>
 
-        <div class="rate">
-            <span> Schüler Bewertung :  </span>
+        <tr class="rate">
+            <td> Schüler Bewertung :  </td>
+            <td>
             <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
             <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
             <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
             <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
             <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
-            <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{rating}}}">
-            <span > ( {{{rating}}})</span>
-        </div>
-
+            <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{studentRating}}}">
+            <span > ( {{{studentRating}}})</span>
+            </td>
+        </tr>
+        </table>
 
         <span>via {{{ providerName }}}</span>
         {{#if @root.isCourseGroupTopic}}
