--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -41,32 +41,38 @@
             </a>
         {{/userIsAllowedToViewContent}}
         <table>
-        <tr class="rate">
-            <td> Lehrer Bewertung : </td>
-            <td>
-            <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
-            <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
-            <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{teacherRating}}}">
-            <span > ( {{{teacherRating}}})</span>
-            </td>
-        </tr>
+            {{#if teacherRating}}
+                <tr class="rate">
+                    <td> Lehrer Bewertung : </td>
+                    <td>
+                    <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
+                    <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
+                    <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
+                    <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
+                    <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
+                    <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{teacherRating}}}">
+                    <span > ( {{{teacherRating}}})</span>
+                    </td>
+                </tr>
+            {{/if}}
 
-        <tr class="rate">
-            <td> Schüler Bewertung :  </td>
-            <td>
-            <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
-            <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
-            <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{studentRating}}}">
-            <span > ( {{{studentRating}}})</span>
-            </td>
-        </tr>
+            {{#if studentRating}}
+                <tr class="rate">
+                    <td> Schüler Bewertung :  </td>
+                    <td>
+                    <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
+                    <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
+                    <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
+                    <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
+                    <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
+                    <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{studentRating}}}">
+                    <span > ( {{{studentRating}}})</span>
+                    </td>
+                </tr>
+            {{/if}}
+
         </table>
+
 
         <span>via {{{ providerName }}}</span>
         {{#if @root.isCourseGroupTopic}}
