--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -40,6 +40,7 @@
                 </div>
 
                 <div class="form-group">
+                    <input type="hidden" name="consent" value={{consent}} />
                     <input type="submit" class="btn btn-block btn-primary btn-login" value="Anmelden" />
                 </div>
             </form>
