--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -1,4 +1,7 @@
 {{#extend "administration/administration"}}
+    {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
+    {{/content}}
     {{#content "page"}}
         <div class="route-administration">
             <section class="section-school section-default">
