--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -39,6 +39,11 @@
             max-width: 100%;
             height: auto !important;
         }
+        iframe{
+            border: 1px solid $primaryColor;
+            border-radius: 5px;
+            outline: none;
+        }
     }
     .disabled {
         cursor: not-allowed;
@@ -108,6 +113,9 @@
         .geo-gebra-info {
             color: white;
             background-color: $primaryColor;
+        }
+        input{
+            width: 100%;
         }
     }
 }
