--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -110,11 +110,8 @@
                             <a class="btn btn-secondary btn-thin dropdown-toggle btn-create-qr" data-toggle="dropdown">
                                 <i class="fa fa-qrcode"></i>
                             </a>
-                            <div class="dropdown-menu print">
+                            <div class="dropdown-menu">
                                 <div class="content qr-show"></div>
-                                <div class="btn btn-secondary btn-print mb-1 ml-1 mt-0" data-toggle="tooltip" title="" data-original-title="QR-Code drucken">
-                                    <i class="fa fa-print"></i> Drucken
-                                </div>
                             </div>
                         </div>
                     </li>
