--- a/views/registration/full.hbs
+++ b/views/registration/full.hbs
@@ -1,4 +1,4 @@
-{{#extend "registration/registration" noPassword="false"}}
+{{#extend "registration/registration"}}
     {{#content "fields"}}
         <div class="form-group">
             <label>Vorname</label>
