--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -9,6 +9,7 @@
     margin: 0;
     border-radius: 2px;
     overflow: hidden;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     .sc-card-header {
         display: flex;
         flex-direction: row;
@@ -39,7 +40,7 @@
             align-self: flex-end;
             font-weight: 700;
             overflow: hidden;
-            z-index: 10;
+            z-index: 100;
             text-shadow: 2px 2px 5px rgba(0,0,0,.6);
             padding-right: 5px;
             word-break: break-all;
@@ -57,8 +58,8 @@
                 padding: 0;
                 margin: 0;
                 border-radius: 50%;
-                background: none;
                 border: none;
+                background: none;
                 color: #fff;
                 font-size: 20px;
                 text-decoration: none;
@@ -69,7 +70,7 @@
                 opacity: .5;
                 transition: all .1s ease-in-out;
                 &:hover {
-                    background: rgba(0,0,0,.2);
+                    background: rgba(0,0,0,.3);
                 }
             }
             .sc-card-menu-info {
@@ -143,7 +144,7 @@
                 opacity: 1;
             }
         } 
-    } 
+    }
 }
 
 /* IE8-11 specific styles go here */
