--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -5,7 +5,6 @@
 {{#content "scripts" mode="append"}}
     <script src="/vendor/webcomponents-lite.min.js" defer></script>
     <script src="/scripts/moment/moment.js" defer></script>
-    <script src="/scripts/filter/feathers-filter.js" defer></script>
 {{/content}}
 {{#extend "homework/homework"}}
     {{#content "page"}}
@@ -13,19 +12,30 @@
             <section class="section-homework">
                 {{#if addButton}}
                     {{#userHasPermission "HOMEWORK_CREATE"}}
-                    <a href="/homework/new{{#if @root.createPrivate}}?private=true{{/if}}" class="btn btn-primary btn-add create">
+                    <a href="/homework/new{{#if @root.createPrivate}}?private=true{{/if}}" class="sc-btn sc-btn-primary btn-add create"
+                       data-toggle="tooltip" data-placement="left" data-title="Aufgabe hinzufügen" >
                         <i class="fa fa-plus" aria-hidden="true"></i>
                         <p>Aufgabe hinzufügen</p>
                     </a>
                     {{/userHasPermission}}
                 {{/if}}
-                <div><feathers-filter id="filter"
-                        filter='{{@root.filterSettings}}'
-                        add-label='Filter hinzufügen'
-                        apply-label='Übernehmen'
-                        cancle-label='Abbrechen'
-                        handle-url='true'
-                /></div>
+                <div class="form-group sort">
+                    <select name="sort" id="sortselection" data-placeholder="Sortieren">
+                        {{#each sortmethods}}
+                            {{#if this.active}}
+                                <option value='{{this.query}}' selected="selected">{{this.title}}</option>
+                            {{else}}
+                                <option value='{{this.query}}'>{{this.title}}</option>
+                            {{/if}}
+                        {{/each}}
+                    </select>
+                    {{#if this.desc}}
+                        <button id="desc" type="submit" name="desc" value="false">▲</button>
+                    {{else}}
+                        <button id="desc" type="submit" name="desc" value="true">▼</button>
+                    {{/if}}
+                </div>
+
 
                 <ol class="homework">
                     <div class="row"><div class="col-xl-12">
