switched button style on settings page to sc-btn

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -64,7 +64,7 @@
                 {{/userHasPermission}}
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary"/>
+                    <input type="submit" class="sc-btn sc-btn-primary"/>
                 </div>
             </form>
 
@@ -117,14 +117,14 @@
                             </h5>
                         {{/if}}
                         <div class="panel-footer">
-                            <button type="button" class="btn btn-default btn-device"
+                            <button type="button" class="sc-btn sc-btn-primary btn-default btn-device"
                                     onclick="pushManager.requestPermission()">
                                 <i class="fa fa-bell" aria-hidden="true"></i>
                                 Benachrichtigungen
                                 aktivieren
                             </button>
 
-                            <button type="button" class="btn btn-default send-test-notification">
+                            <button type="button" class="sc-btn sc-btn-primary btn-default send-test-notification">
                                 <i class="fa fa-paper-plane" aria-hidden="true"></i>
                                 Test-Benachrichtigung
                                 senden
