--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -97,7 +97,7 @@
                         <a data-toggle="collapse" class="collapse-toggle" href="#homeworks">
                             <h4>
                                 <small data-toggle="tooltip" title="gestellte Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
-                                Gestellte Aufgaben 
+                                Gestellte Aufgaben
                                 <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
                             </h4>
                         </a>
@@ -120,7 +120,7 @@
                         <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
                             <h4>
                                 <small data-toggle="tooltip" title="Meine Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
-                                Meine Aufgaben 
+                                Meine Aufgaben
                                 <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
                             </h4>
                         </a>
@@ -155,6 +155,12 @@
             {{#embed "lib/components/modal-form" class="share-modal"}}
                 {{#content "fields"}}
                     {{> "topic/forms/form-share"}}
+                {{/content}}
+            {{/embed}}
+
+            {{#embed "lib/components/modal" class="external-link-modal"}}
+                {{#content "body"}}
+                    {{> "content/forms/form-external-link"}}
                 {{/content}}
             {{/embed}}
 
