--- a/theme/n21/views/lib/extended_footer.hbs
+++ b/theme/n21/views/lib/extended_footer.hbs
@@ -1,10 +1,10 @@
-<footer>
+oter>
     <div class="container">
         <div class="row">  
             <div  class="col-md-4">        
                 <h4>Kontakt</h4>
                 <ul>
-                    <li>Allgemeine Anfragen: <a href="mailto:terhaseborg@n-21.de" target:"_blank">terhaseborginfo@n-21.de</a></li>
+                    <li>Allgemeine Anfragen: <a href="mailto:terhaseborg@n-21.de" target:"_blank">terhaseborg@n-21.de</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
