change logo size

--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -126,4 +126,10 @@ body {
             margin-bottom: 2rem;
         }
     }
+    .partner-img {
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 70%
+    }
 }
