--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -92,7 +92,7 @@
                     <section id="partner" class="card">
                         <div class="card-block">
                             <h4 class="card-title">Projektdurchführung</h4>
-                            <div class="card-text">
+                            <div class="card-text partner-img">
                                 <a href="https://hpi.de" target="_blank">
                                     <img src="/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid" style="padding: 20px;">
                                 </a>
