--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -16,6 +16,7 @@
                     <li><a href="/impressum#data_security">Datenschutzerklärung</a></li>
                     <li><a href="/team">Team</a></li>
                     <li><a href="/partner">Partner</a></li>
+                    <li><a href="/about">Über das Projekt</a></li>
                     <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
                 </ul>
             </div>
