--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -13,6 +13,8 @@
                 <span> - </span>
                 <a href="/team">Team</a>
                 <span> - </span>
+                <a href="/about">Über das Projekt</a>
+                <span> - </span>
                 <a href="/partner">Partner</a>
             </div>
         </div>
