--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -14,6 +14,9 @@
                     <a class="nav-link" href="https://blog.schul-cloud.org/" target="scblog">Blog</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/community">Mitmachen</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
                 </li>
             </ul>
