--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -51,8 +51,8 @@
     <h3>Entwickler, Informatik AGs, ...</h3>
 
     <p>Die HPI Schul-Cloud ist ein Open-Source Projekt. Der Quellcode ist unter
-        <a href="https://github.com/schul-cloud">https://github.com/schul-cloud</a> zu finden. 
-        Unser Ticketsystem lieggt unter <a href="https://ticketsystem.schul-cloud.org">https://ticketsystem.schul-cloud.org"</a> zu finden. 
+        <a href="https://github.com/schul-cloud">https://github.com/schul-cloud</a> zu finden.
+        Unser Ticketsystem liegt unter <a href="https://ticketsystem.schul-cloud.org">https://ticketsystem.schul-cloud.org"</a>. 
         Bei Bedarf kann auch eine Aufnahme in unseren Team-Messenger erfolgen.
         Wir freuen uns über Bugfixes und neue Funktionen. Mehr Infos gerne bei <a href="mailto:jan.renz@hpi.de">jan.renz@hpi.de</a> erfragen.</p> 
 </section>
