--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -55,4 +55,16 @@
         Unser Ticketsystem liegt unter <a href="https://ticketsystem.schul-cloud.org">https://ticketsystem.schul-cloud.org"</a>. 
         Bei Bedarf kann auch eine Aufnahme in unseren Team-Messenger erfolgen.
         Wir freuen uns über Bugfixes und neue Funktionen. Mehr Infos gerne bei <a href="mailto:jan.renz@hpi.de">jan.renz@hpi.de</a> erfragen.</p> 
+        
+    <br />
+    <h3>Stellenausschreibungen im Projekt Schul-Cloud</h3>
+    <p>Du möchtest gerne Mitglied in unserem Schul-Cloud Team werden? Wir suchen:
+    <br />
+    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/senior-mw-strategischepolitische-kommunikation-im-projekt-schul-cloud.html">Senior (m/w) Strategische/Politische Kommunikation im Projekt Schul-Cloud</a>
+    <br />
+    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/junior-mw-strategischepolitische-kommunikation-im-projekt-schul-cloud.html">Junior (m/w) Strategische/Politische Kommunikation im Projekt Schul-Cloud</a>
+    <br />
+    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/system-engineer-dev-ops-mw.html">System Engineer Dev-Ops im Projekt Schul-Cloud (m/w)</a>
+    <br />
+    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html">Web Developer im Projekt Schul-Cloud (m/w)</a></p>
 </section>
