--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -298,6 +298,11 @@
   color:#000;
   font-size:2em
 }
+.section-team .teamsmall .person-title{
+  color:#000;
+  font-size:1.5em
+}
+
 .section-team .person-desc{
   color:rgba(0,0,0,.4);
   margin-top:10px;
