--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -15,6 +15,8 @@
                 <span> - </span>
                 <a href="/about">Über das Projekt</a>
                 <span> - </span>
+                <a href="/community">Mitmachen</a>
+                <span> - </span>
                 <a href="/partner">Partner</a>
             </div>
         </div>
