--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -65,9 +65,7 @@
                 <p>
                     Das Schul-Cloud Projekt wird von einem Fachbeirat unterstützt, der sich aus verschiedenen
                     Vertreter/innen der Bildungspraxis, Wirtschaft und Politik zusammensetzt. Im Fokus stehen neben
-                    technischen Aspekten, auch Themen wie Datenschutz und Pädagogik. Die Ergebnisse der letzten
-                    Fachbeirats-Sitzung können Sie in unserem
-                    <a href="https://blog.schul-cloud.org/einblicke-in-die-arbeit-des-fachbeirats/" target="_blank">Blog</a> nachlesen.
+                    technischen Aspekten, auch Themen wie Datenschutz und Pädagogik.
                 </p>
             </div>
         </div>
